[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus.gd" type="Script" id=1]
[ext_resource path="res://soundsandmusic (1)/music/Thatched Villagers.mp3" type="AudioStream" id=2]

[node name="menus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
text = "start"

[node name="options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
text = "options"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
text = "exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
